Fix a flexbox alignment style

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -314,7 +314,7 @@ a.square {
 #footer .footer-inner div:last-child {
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 #footer .footer-inner div:last-child a {
